header almost done

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         </div>
 
         <div class="row form_Container">
-          <div class="first_class col-6">
+          <div class="col-6">
             <div class="intervention_text">
               <svg
                 width="503"
@@ -250,50 +250,31 @@
         </div>
 
         <!-- wave -->
-        <div>
-          <div class="wave-container">
-            <svg
-              viewBox="0 0 1440 111"
-              fill="none"
-              xmlns="http://www.w3.org/2000/svg"
-              style="width: 100%; height: auto"
-            >
-              <path
-                d="M0 68.6766C310 -147.298 926 229.879 1440 68.6766V111H0V68.6766Z"
-                fill="#F5F5F5"
-                fill-opacity="0.3"
-              />
-              <path
-                d="M0 68.6766C310 -147.298 926 229.879 1440 68.6766V111H0V68.6766Z"
-                fill="#F5F5F5"
-                fill-opacity="0.3"
-              />
-            </svg>
-          </div>
-          <div class="wave-container">
-            <img style="width: 100%" src="./Assets/Rectangle 2.png" />
-          </div>
+      </div>
+      <div>
+        <div class="wave-container">
+          <svg
+            viewBox="0 0 1440 111"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+            style="width: 100%; height: auto"
+          >
+            <path
+              d="M0 68.6766C310 -147.298 926 229.879 1440 68.6766V111H0V68.6766Z"
+              fill="#F5F5F5"
+              fill-opacity="0.3"
+            />
+            <path
+              d="M0 68.6766C310 -147.298 926 229.879 1440 68.6766V111H0V68.6766Z"
+              fill="#F5F5F5"
+              fill-opacity="0.3"
+            />
+          </svg>
+        </div>
+        <div class="wave-container">
+          <img style="width: 100%" src="./Assets/Rectangle 2.png" />
         </div>
       </div>
-
-      <!-- <div>
-        <p>asdsa</p>
-        <p>asdsa</p>
-        <p>asdsa</p>
-        <p>asdsa</p>
-        <p>asdsa</p>
-        <p>asdsa</p>
-        <p>asdsa</p>
-        <p>asdsa</p>
-        <p>asdsa</p>
-        <p>asdsa</p>
-        <p>asdsa</p>
-        <p>asdsa</p>
-        <p>asdsa</p>
-        <p>asdsa</p>
-        <p>asdsa</p>
-        <p>asdsa</p>
-      </div> -->
     </header>
 
     <script src="script.js"></script>
