input auto complete background issue fixed

--- a/index.html
+++ b/index.html
@@ -121,8 +121,7 @@
           <div class="col-6">
             <div class="intervention_text">
               <svg
-                width="503"
-                height="119"
+                style="width: 100%; height: auto"
                 viewBox="0 0 503 119"
                 fill="none"
                 xmlns="http://www.w3.org/2000/svg"
@@ -132,11 +131,11 @@
                   maskUnits="userSpaceOnUse"
                   x="-1"
                   y="-1"
-                  width="505"
-                  height="121"
+                  width="100%"
+                  height="100%"
                   fill="black"
                 >
-                  <rect fill="white" x="-1" y="-1" width="505" height="121" />
+                  <rect fill="white" x="0%" y="0%" width="100%" height="100%" />
                   <path
                     d="M24.944 46.768C21.4027 46.768 18.1387 46.2133 15.152 45.104C12.208 43.952 9.62667 42.3307 7.408 40.24C5.232 38.1493 3.52533 35.696 2.288 32.88C1.09333 30.064 0.496 26.9707 0.496 23.6C0.496 20.2293 1.09333 17.136 2.288 14.32C3.52533 11.504 5.25333 9.05066 7.472 6.96C9.69067 4.86933 12.2933 3.26933 15.28 2.16C18.2667 1.008 21.552 0.431999 25.136 0.431999C29.104 0.431999 32.6667 1.09333 35.824 2.416C39.024 3.73866 41.712 5.65866 43.888 8.176L37.232 14.32C35.6107 12.6133 33.84 11.3547 31.92 10.544C30 9.69067 27.9093 9.264 25.648 9.264C23.472 9.264 21.488 9.60533 19.696 10.288C17.904 10.9707 16.3467 11.952 15.024 13.232C13.744 14.512 12.7413 16.0267 12.016 17.776C11.3333 19.5253 10.992 21.4667 10.992 23.6C10.992 25.6907 11.3333 27.6107 12.016 29.36C12.7413 31.1093 13.744 32.6453 15.024 33.968C16.3467 35.248 17.8827 36.2293 19.632 36.912C21.424 37.5947 23.3867 37.936 25.52 37.936C27.568 37.936 29.552 37.616 31.472 36.976C33.4347 36.2933 35.3333 35.1627 37.168 33.584L43.056 41.072C40.624 42.9067 37.7867 44.3147 34.544 45.296C31.344 46.2773 28.144 46.768 24.944 46.768ZM33.584 39.728V22.896H43.056V41.072L33.584 39.728ZM62.223 19.248H83.791V27.312H62.223V19.248ZM62.991 37.68H87.375V46H52.687V1.2H86.543V9.52H62.991V37.68ZM104.905 46V9.648H90.5685V1.2H129.609V9.648H115.273V46H104.905ZM147.424 46L167.392 1.2H177.632L197.664 46H186.784L170.4 6.448H174.496L158.048 46H147.424ZM157.408 36.4L160.16 28.528H183.2L186.016 36.4H157.408ZM202.312 46V1.2H210.888L237.32 33.456H233.16V1.2H243.4V46H234.888L208.392 13.744H212.552V46H202.312Z"
                   />
@@ -168,7 +167,7 @@
               </p>
             </div>
           </div>
-          <div style="width: 40%; margin-left: auto" class="col-6">
+          <div style="margin-right: -1rem; width: 40%; margin-left: auto">
             <div class="contact_form_container">
               <div class="contact-form">
                 <h4 class="form_heading">Contact Us</h4>
