--- a/index.html
+++ b/index.html
@@ -182,10 +182,12 @@
                           name="firstName"
                           class="form-control"
                           required
-                          data-original-title="This field is required."
+                          data-original-title="This field can’t be empty. Please fill it in.."
                           title=""
                         />
                         <label for="firstName">First Name</label>
+                        <div class="tooltip"></div>
+                        <!-- Tooltip element -->
                       </div>
                       <div class="floating-label">
                         <input
@@ -199,6 +201,8 @@
                           title=""
                         />
                         <label for="businessEmail">Business Email</label>
+                        <div class="tooltip"></div>
+                        <!-- Tooltip element -->
                       </div>
                     </div>
 
@@ -211,10 +215,12 @@
                           name="lastName"
                           class="form-control"
                           required
-                          data-original-title="This field is required."
+                          data-original-title="This field can’t be empty. Please fill it in.."
                           title=""
                         />
                         <label for="lastName">Last Name</label>
+                        <div class="tooltip"></div>
+                        <!-- Tooltip element -->
                       </div>
                       <div class="floating-label">
                         <input
@@ -223,10 +229,12 @@
                           id="company"
                           name="company"
                           class="form-control"
-                          data-original-title="Optional field."
+                          data-original-title="This field can’t be empty. Please fill it in.."
                           title=""
                         />
                         <label for="company">Company</label>
+                        <div class="tooltip"></div>
+                        <!-- Tooltip element -->
                       </div>
                     </div>
                   </div>
@@ -244,6 +252,8 @@
                     <option value="CA">Canada</option>
                     <option value="UK">United Kingdom</option>
                   </select>
+                  <div class="tooltip"></div>
+                  <!-- Tooltip element -->
 
                   <button class="form_heading form_btn" type="button">
                     Submit
