Tooltip added with placeholder text

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                 <form id="contactForm">
                   <div style="margin: 0 0; display: flex; flex-direction: row">
                     <div class="form_container col-6">
-                      <div class="floating-label">
+                      <div class="floating-label aligned-input">
                         <input
                           placeholder=" "
                           type="text"
