--- a/index.html
+++ b/index.html
@@ -23,22 +23,30 @@
             <img class="logo" src="/Assets/logo.svg" />
           </div>
           <div class="col-6">
+            <div class="row header_menu">
+              <img class="" src="Assets/hamburger menu.svg" />
+            </div>
+
             <div class="row header_elements">
-              <p>HOME</p>
-              <p>ABOUT</p>
-              <p class="contact_p">CONTACT</p>
-              <p class="largeHeader">|</p>
-              <p class="largeHeader">
+              <p class="hover_effecting_para first_el">HOME</p>
+              <p class="hover_effecting_para">ABOUT</p>
+              <p class="contact_p hover_effecting_para">CONTACT</p>
+              <p class="largeHeader hover_effecting_para">|</p>
+              <p class="largeHeader hover_effecting_para">
                 CALL NOW
-                <span style="color: #5bc8af"> XXX.XXX.XXX</span>
+                <span class="hover_effecting_para" style="color: #5bc8af">
+                  XXX.XXX.XXX</span
+                >
               </p>
             </div>
           </div>
         </div>
-        <div class="smallHeader">
-          <p>
+        <div class="smallHeader ">
+          <p  class="hover_effecting_para">
             CALL NOW
-            <span style="color: #5bc8af"> XXX.XXX.XXX</span>
+            <span class="hover_effecting_para" style="color: #5bc8af">
+              XXX.XXX.XXX</span
+            >
           </p>
         </div>
         <div class="row form_Container">
@@ -150,8 +158,8 @@
                   <!-- Tooltip element -->
 
                   <button class="form_heading form_btn" type="button">
-                    <img src="/Assets/submit_svg.svg"/>
-                    </button>
+                    <img src="/Assets/submit_svg.svg" />
+                  </button>
                 </form>
               </div>
             </div>
@@ -160,8 +168,6 @@
         <div class="_786pForm_container">
           <div class="_786pForm">
             <div class="_786_flex">
-
-
               <div class="col-12">
                 <div class="intervention_text">
                   <img
@@ -169,15 +175,14 @@
                     src="/Assets/GET AN INTERVENTION.svg"
                   />
                   <p style="padding-top: 12px">
-                    Showing greater respect to older adults can be done in several
-                    ways: acknowledging and putting to use the talents and skills of older
-                    adults; creating intergenerational initiatives; and allowing
-                    older adults to stay active and independent for as long as
-                    possible.
+                    Showing greater respect to older adults can be done in
+                    several ways: acknowledging and putting to use the talents
+                    and skills of older adults; creating intergenerational
+                    initiatives; and allowing older adults to stay active and
+                    independent for as long as possible.
                   </p>
                 </div>
               </div>
-
 
               <div class="contact-form">
                 <h4 class="form_heading">Contact Us</h4>
@@ -265,7 +270,7 @@
                   <!-- Tooltip element -->
 
                   <button class="form_heading form_btn" type="button">
-                  <img src="/Assets/submit_svg.svg"/>
+                    <img src="/Assets/submit_svg.svg" />
                   </button>
                 </form>
               </div>
