--- a/index.html
+++ b/index.html
@@ -24,7 +24,12 @@
           </div>
           <div class="col-6">
             <div class="row header_menu">
-              <img class="" src="Assets/hamburger menu.svg" />
+              <img 
+              src="Assets/hamburger menu.svg" 
+              alt="Menu Icon" 
+              id="menuToggleBtn" 
+              class="header__icon"
+            />
             </div>
 
             <div class="row header_elements">
@@ -315,6 +320,14 @@
             <img style="width: 100%" src="./Assets/header_ractangle_360.svg" />
           </div>
         </div>
+      </div>
+      <div id="dropdownMenu" class="dropdown-menu">
+        <ul class="dropdown-menu__list">
+          <li class="dropdown-menu__item">Home</li>
+          <li class="dropdown-menu__item">About Us</li>
+          <li class="dropdown-menu__item">Services</li>
+          <li class="dropdown-menu__item">Contact</li>
+        </ul>
       </div>
     </header>
     <script src="script.js"></script>
