--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
   <body>
     <header class="header">
-      <div class="container">
+      <div class="header_container">
         <div class="row header_nav">
           <div class="col-6">
             <img class="logo" src="/Assets/logo.svg" />
@@ -330,6 +330,19 @@
         </ul>
       </div>
     </header>
+
+
+
+    <div class="information">
+      <div class="container">
+        <div class="row">
+          <div class="col-6">asd</div>
+          <div class="col-6">asdda</div>
+
+        </div>
+      </div>
+    </div>
+
     <script src="script.js"></script>
   </body>
 </html>
